fixed z-index complications

--- a/activity.css
+++ b/activity.css
@@ -2,7 +2,6 @@
     flex: 0 0 33.33%;                     
     background-color: #fff;
     position: relative;
-    z-index: 500;
 }
 
 
