--- a/my-css/layout.css
+++ b/my-css/layout.css
@@ -594,10 +594,6 @@ ul#nav li.current a { color: #F06000; }
    position: absolute;
  }
 
- #portfolio .col-twelve {
-   z-index: 1;
- }
-
  #portfolio .col-twelve h5 {
    padding-top: 90px;
  }
